--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w --progress"
+    "start": "webpack -w --progress",
+    "server": "node server"
   },
   "dependencies": {
     "howler": "^2.1.3",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
+    "express": "4.15.4",
     "ts-loader": "^8.0.11",
     "ts-unused-exports": "^6.2.4",
     "typescript": "^4.0.5",
