--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "devDependencies": {
     "@types/howler": "^2.2.4",
     "@types/lodash": "^4.14.149",
-    "express": "^4.17.2",
+    "circular-dependency-plugin": "^5.2.2",
+    "express": "^4.18.2",
+    "minimatch": "3.1.2",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.6",
     "ts-unused-exports": "^6.2.4",
-    "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "author": "",
   "license": "ISC"
